fix position with overflowed text

--- a/src/TeaDigitalMenu.scss
+++ b/src/TeaDigitalMenu.scss
@@ -47,11 +47,9 @@
       position: absolute;
       right: 0;
       padding: 5mm;
-
       p {
         color: white;
-        margin-bottom: 10mm;
-        line-height: 150%;
+        margin-bottom: 5mm;
       }
 
       span.title {
