--- a/src/WineDigitalMenu.scss
+++ b/src/WineDigitalMenu.scss
@@ -39,9 +39,9 @@
 
     .wine-details {
       background-color: rgba(black, 0.5);
-      padding: 5mm;
+      padding: 2mm 5mm;
       position: relative;
-      height: 100%;
+      height: 9.2cm;
       font-weight: 400;
       .italic {
         font-style: italic;
